--- a/src/App.css
+++ b/src/App.css
@@ -47,20 +47,14 @@ body {
 @layer utilities {
   @media (max-width:400px) {
     .small-text {
-      font-size: 2rem;
-      letter-spacing: 0.2rem;
+      font-size: 1rem;
     }
 
     .small-text2 {
-      font-size: 1.8rem;
+      font-size: 1.5rem;
+      margin-left: 1rem;
     }
 
-    .small-text3 {
-      font-size: 1.35rem;
-    }
-
-    .small-text4 {
-      font-size: 4rem;
-    }
   }
+
 }
